Fixed Header spacing on top

--- a/frontend/src/components/Recommend/styles.css
+++ b/frontend/src/components/Recommend/styles.css
@@ -3,18 +3,16 @@
 body {
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
-  padding-top: 75px;
+  padding-top: 0px;
 }
 
 header {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 75px;
-  background: #000000;
   z-index: 10;
-  text-align: center;
 }
 
 header section {
